@@ -124,6 +124,9 @@ C-API
 Library
 -------
 
+- Issue #9065: tarfile no longer uses "root" as the default for the uname and
+  gname field.
+
 - Issue #8980: Fixed a failure in distutils.command check that was shadowed
   by an environment that does not have docutils. Patch by Arfrever.
 
